--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -79,7 +79,7 @@ nav {
 .well {
   max-width: 728px;
   border: solid 1px var(--text-color);
-  border-radius: 6px;;
+  border-radius: 6px;
   padding: 1.5rem;
   margin: 10px auto;
 }
